fix image dimensions, add scrollbar styling

--- a/mystyle.css
+++ b/mystyle.css
@@ -73,3 +73,22 @@ input[type="number"] {
   opacity: 0.95;
   transition: 0.15s;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--offbar-background-color);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
